--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1 class="display-5">Trabajamos con Netlify + GitHub (CI/CD) = IaC</h1>
    <p>Primer despliegue del proyecto</p>
     <h1 class="display-5">¡Versión cambio 1, CI desde Git y CD desde Netlify actualizado! </h1>
-    <h2 class="display-5">Autor: Carlos Gardel Martinez Hortua</h2>
+    <h2 class="display-5">Autor: Juan Manuel Arias Galvis</h2>
     <p class="lead">
     </p>
 
